@@ -1,0 +1,8 @@
+# /etc/slackpkg/slackpkgplus.conf
+SLACKPKGPLUS=on
+VERBOSE=1
+USEBL=1
+PKGS_PRIORITY=( desktop-base:.* )
+REPOPLUS=( desktop-base slackpkgplus )
+MIRRORPLUS['desktop-base']=http://www.microlinux.fr/slackware/desktop-base-14.0-32bit/
+MIRRORPLUS['slackpkgplus']=http://slakfinder.org/slackpkg+/
