@@ -55,6 +55,9 @@ microlinux-wallpapers
 mjpegtools
 mlt
 mlt.old
+mozilla-firefox-l10n
+mozilla-thunderbird-l10n
+MPlayer
 mplayer-codecs
 musepack-tools
 numpy
