@@ -1,0 +1,118 @@
+#!/bin/sh
+
+# Slackware build script for MPlayer
+
+# Written by Niki Kovacs <info@microlinux.fr)
+# Based on Eric Hameleers' SlackBuild
+#
+# This script builds MPlayer WITHOUT a GUI, since I only use it as a backend
+# for SMPlayer.
+
+PRGNAM=MPlayer
+VERSION=${VERSION:-1.1}	 
+BUILD=${BUILD:-2}
+TAG=${TAG:-_microlinux}		
+
+NUMJOBS=${NUMJOBS:--j5}
+
+# Automatically determine the architecture we're building on:
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+    # Unless $ARCH is already set, use uname -m for all other archs:
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}	
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}	
+
+if [ "$ARCH" = "i486" ]; then
+  SLKCFLAGS="-O2 -march=i486 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "i686" ]; then
+  SLKCFLAGS="-O2 -march=i686 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "x86_64" ]; then
+  SLKCFLAGS="-O2 -fPIC"
+  LIBDIRSUFFIX="64"
+else
+  SLKCFLAGS="-O2"
+  LIBDIRSUFFIX=""
+fi
+
+set -e 
+
+if [ ! -r $PRGNAM-$VERSION.tar.xz ] ; then
+   wget -c http://www.mplayerhq.hu/$PRGNAM/releases/$PRGNAM-$VERSION.tar.xz
+fi
+
+md5sum -c $PRGNAM-$VERSION.tar.xz.md5
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+rm -rf $PRGNAM-$VERSION
+tar xvf $CWD/$PRGNAM-$VERSION.tar.xz || exit 1
+cd $PRGNAM-$VERSION || exit 1
+chown -R root:root .
+find . \
+ \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+ -exec chmod 755 {} \; -o \
+ \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+ -exec chmod 644 {} \;
+
+# Determine what X we're running (the modular X returns the prefix
+# in the next command, while older versions stay silent):
+XPREF=$(pkg-config --variable=prefix x11) || true
+[ "$XPREF" == "" ] && XPREF='/usr/X11R6'
+
+# MPlayer wants to automatically determine compiler flags,
+# so we don't provide CFLAGS:
+./configure \
+  --prefix=/usr \
+  --mandir=/usr/man \
+	--confdir=/etc/mplayer \
+	--disable-gui \
+	--enable-menu \
+	--disable-arts \
+	--disable-bitmap-font \
+	--enable-runtime-cpudetection \
+	--codecsdir=/usr/lib${LIBDIRSUFFIX}/codecs \
+	--language="en de fr" \
+	|| exit 1
+
+# So that MPlayer does not report "UNKNOWN" as it's version:
+echo $VERSION > VERSION
+make $NUMJOBS 
+make DESTDIR=$PKG install || exit 1
+
+# Configuration file
+cp etc/example.conf $PKG/etc/mplayer/mplayer.conf
+
+find $PKG -print0 | xargs -0 file | grep -e "executable" -e "shared object" | grep ELF \
+  | cut -f 1 -d : | xargs strip --strip-unneeded 2> /dev/null || true
+
+find $PKG/usr/man -type f -exec gzip -9 {} \;
+for i in $( find $PKG/usr/man -type l ) ; do ln -s $( readlink $i ).gz $i.gz ; rm $i ; done
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cp -a \
+  AUTHORS LICENSE README VERSION \
+  $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $PRGNAM-$VERSION $PKG
+
