@@ -1,0 +1,12 @@
+       |-----handy-ruler------------------------------------------------------|
+MPlayer: MPlayer (media player)
+MPlayer:
+MPlayer: MPlayer is a movie player.  It plays most MPEG/VOB, AVI, Ogg/OGM,
+MPlayer: VIVO, ASF/WMA/WMV, QT/MOV/MP4, RealMedia, Matroska, NUT, NuppelVideo,
+MPlayer: FLI, YUV4MPEG, FILM, RoQ, PVA files, supported by many native, XAnim,
+MPlayer: and Win32 DLL codecs.  You can watch VideoCD, SVCD, DVD, 3ivx,
+MPlayer: DivX 3/4/5, WMV and even H.264 movies.
+MPlayer:
+MPlayer: This version comes without a graphical interface.
+MPlayer:
+MPlayer: Package created by Niki Kovacs <info@microlinux.fr>
