@@ -1,0 +1,115 @@
+#!/bin/sh
+
+# Slackware build script for mozilla-thunderbird-l10n
+
+# Written by Niki Kovacs <info@microlinux.fr)
+#
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR IMPLIED
+#  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+#  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO
+#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+#  OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+#  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+#  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+PRGNAM=mozilla-thunderbird-l10n
+VERSION=${VERSION:-17.0.10}	 
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}		
+
+# Automatically determine the architecture we're building on:
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+    # Unless $ARCH is already set, use uname -m for all other archs:
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+if [ "$ARCH" = "i486" ]; then
+  SLKCFLAGS="-O2 -march=i486 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "i686" ]; then
+  SLKCFLAGS="-O2 -march=i686 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "x86_64" ]; then
+  SLKCFLAGS="-O2 -fPIC"
+  LIBDIRSUFFIX="64"
+else
+  SLKCFLAGS="-O2"
+  LIBDIRSUFFIX=""
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}	
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}	
+
+URL="https://ftp.mozilla.org/pub/mozilla.org/thunderbird/releases"
+
+# Build translations for the following languages
+TBIRDLANGS="de fr"
+
+set -e # Exit on most errors
+
+for TBIRDLANG in $TBIRDLANGS; do
+
+	# Download tarball
+	if [ ! -r $TBIRDLANG.xpi ] ; then
+					wget -c --no-check-certificate -O ${TBIRDLANG}-$(uname -m).xpi \
+		      ${URL}/${VERSION}esr/linux-$(uname -m)/xpi/${TBIRDLANG}.xpi
+	fi
+
+	# Check tarball -> these .xpi files seem to be moving targets
+	# md5sum -c $TBIRDLANG-$(uname -m).xpi.md5
+
+done
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+rm -rf $PRGNAM-$VERSION
+
+for TBIRDLANG in $TBIRDLANGS; do
+	mkdir -p $PRGNAM-$VERSION/$TBIRDLANG
+	unzip $CWD/$TBIRDLANG-$(uname -m).xpi -d $PRGNAM-$VERSION/$TBIRDLANG
+	cd $PRGNAM-$VERSION/$TBIRDLANG
+	chown -R root:root .
+	find . \
+	 \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+	 -exec chmod 755 {} \; -o \
+	 \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+	 -exec chmod 644 {} \;
+	mkdir -p $PKG/usr/lib$LIBDIRSUFFIX/thunderbird-$VERSION/extensions/langpack-$TBIRDLANG@thunderbird.mozilla.org
+	cp -a * $PKG/usr/lib$LIBDIRSUFFIX/thunderbird-$VERSION/extensions/langpack-$TBIRDLANG@thunderbird.mozilla.org
+done
+
+mkdir -p $PKG/usr/lib$LIBDIRSUFFIX/thunderbird-$VERSION/defaults/pref
+cp -a $CWD/defaultlocale.js $PKG/usr/lib$LIBDIRSUFFIX/thunderbird-$VERSION/defaults/pref/
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $PRGNAM-$VERSION $PKG
+
