@@ -1,0 +1,12 @@
+                        |-----handy-ruler------------------------------------------------------|
+mozilla-thunderbird-l10n: mozilla-thunderbird-l10n (Thunderbird translations)
+mozilla-thunderbird-l10n:
+mozilla-thunderbird-l10n: Language files for Mozilla Thunderbird.
+mozilla-thunderbird-l10n: 
+mozilla-thunderbird-l10n: 
+mozilla-thunderbird-l10n: 
+mozilla-thunderbird-l10n: 
+mozilla-thunderbird-l10n:
+mozilla-thunderbird-l10n: 
+mozilla-thunderbird-l10n:
+mozilla-thunderbird-l10n: Package created by Niki Kovacs (http://www.microlinux.fr)
