@@ -1,0 +1,9 @@
+# /etc/slackpkg/slackpkgplus.conf
+SLACKPKGPLUS=on
+VERBOSE=1
+USEBL=1
+PKGS_PRIORITY=( desktop-base:.* desktop-kde:.* )
+REPOPLUS=( desktop-base desktop-kde slackpkgplus )
+MIRRORPLUS['desktop-base']=http://www.microlinux.fr/slackware/desktop-base-14.0-64bit/
+MIRRORPLUS['desktop-kde']=http://www.microlinux.fr/slackware/desktop-kde-14.0-64bit/
+MIRRORPLUS['slackpkgplus']=http://slakfinder.org/slackpkg+/
